--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <div class="left">
+      <div class="header-container">
+        <div class="left-part">
           <div class="logo-wrapper">
             <div class="logo"></div>
           </div>
@@ -26,12 +26,12 @@
             <ul>
 
               <li class="finteh">Финтех курсы</li>
-              <li>Стажировки</li>
-              <li>Мероприятия и партнерства</li>
+              <li class="inactive">Стажировки</li>
+              <li class="inactive">Мероприятия и партнерства</li>
             </ul>
           </div>
         </div>
-        <div class="right">
+        <div class="right-part">
           <div class="login">
             <a class="log-text" href="#">Войти</a>
           </div>
@@ -44,19 +44,139 @@
 
     <main>
 
-      <div class="cont1">
-        <section class="sect1">
+      <section class="frontend-dev">
+        <div class="front-header">
           <h1>Frontend-разработчик</h1>
-          <p>Трехмесячный бесплатный учебный курс от Финтеха, который можно проходить из любой точки России</p>
+          <p class="frontend-par">Трехмесячный бесплатный учебный курс от Финтеха, который можно проходить из любой точки России</p>
           <button class="more-button" href="#">Подробнее</button>
-        </section> 
-        <section>
           <img class="img1" src="/assets/images/frontend.png"/>
-        </section> 
-      </div> 
+        </div> 
+      </section> 
 
+      <section class="course-info">
+        <div class="header-info">
+          <h1>Кому подойдет курс</h1>
+        </div>
+        <div class="info-wrap">
+          <img src="./assets/images/about-course-560.png">
+          <ul class="info-list">
+            <li><p>Вы студент или выпускник технических <br>вузов</p></li>
+            <li><p>Хотите научиться создавать интерфейсы</p></li>
+            <li><p>Хотите познакомиться с современным<br> JavaScript и его фреймворками</p></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="course-material">
+        <div class="material-header">
+          <h1>Что вас ждет на курсе</h1>
+        </div>
+        <div class="course">
+          <div class="about">
+            <div class="material-info">
+              <h2>Основы разработки</h2>
+              <p>Делимся инструментами, которые<br> позволяют нам создавать<br> веб-продукты для миллионов<br> клиентов</p>
+            </div>
+          </div>
+          <div class="about">
+            <div class="material-info">
+              <h2>Доступ к учебным<br> материалам онлайн</h2>
+              <p>Онлайн-курс с лекциями<br> и домашними заданиями. Вы можете<br> его пройти из любой точки России</p>
+            </div>
+          </div>
+          <div class="about">
+            <div class="material-info">
+              <h2>Возможность попасть<br> в команду</h2>
+              <p>Во время курса участники выполняют<br> много практических заданий. <br>Мы замечаем лучших и приглашаем <br>их на собеседование</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="course-content">
+        <div class="content-header">
+          <h1>Как строится обучение</h1>
+        </div>
+        <div class="content-wrapper">
+          <div class="about-content">
+            <div class="content-left">
+              <h2>Онлайн-занятия 1 раз в неделю</h2>
+              <ul class="content-list">
+                <li>Курс стартует в середине февраля и длится три месяца</li>
+                <li>В неделю будете тратить около 2-3 часов на лекции и столько, сколько сочтете нужным, на домашнюю работу</li>
+              </ul>
+            </div>
+          </div>
+          <div class="about-content">
+            <div class="content-right">
+              <h2>Интерактив и нетворкинг</h2>
+              <ul class="content-list">
+                <li>Вы сможете задавать вопросы преподавателям во время<br> лекции в Зуме или в общем чате</li>
+                <li>Обсуждать материалы и домашки вместе с сокурсниками.<br> Это поможет найти новый профессиональный круг общения</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="education">
+        <div class="education-header">
+          <h1>Бесплатное обучение</h1>
+        </div>
+        <div class="education-wrapper">
+          <div class="education-content">
+            <div class="svg-hat"></div>
+            <div class="about-education">
+              <h2>Каждый студент проходит тщательный<br>отбор</h2>
+              <ul class="education-list">
+                <li>Пройдите экзамен и заполните анкету, которая выполняет функцию портфолио</li>
+                <li>Расскажите подробно о своем опыте: сильное портфолио влияет на решение</li>
+              </ul>
+            </div>
+          </div>
+          <div class="education-content">
+            <div class="svg-note"></div>
+            <div class="about-education">
+              <h2>Одинаковые условия для всех</h2>
+              <ul class="education-list">
+                <li>Чтобы успешно закончить курс, нужно выполнить обязательные домашние задания и защитить проект</li>
+                <li>После обучения выдаем сертификат, подтверждающий,что вы освоили теорию и навыки веб-разработки</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="join">
+        <div class="join-header">
+          <h1>Как попасть на курс</h1>
+        </div>
+        <div class="join-wrapper">
+          <div class="about-join">
+            <div class="join-icon"><p>1</p></div>
+            <p>Оставьте заявку онлайн <br>и зарегистрируйтесь <br>на сайте</p>
+          </div>
+          <div class="about-join">
+            <div class="join-icon"><p>2</p></div>
+            <p>Расскажите в анкете,<br> почему хотите изучить<br> веб-разработку</p>
+          </div>
+          <div class="about-join">
+            <div class="join-icon"><p>3</p></div>
+            <p>Пройдите экзамен: <br>решите несколько задач<br> по программированию </p>
+          </div>
+          <div class="about-join">
+            <div class="join-icon"><p>4</p></div>
+            <p>Дождитесь письма <br>об итогах отбора.<br> Начните учиться</p>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer-container">
+        <div class="footer-wrapper">
+          <div class="tinkoff"><p>© 2022 «Тинькофф Образование»</p></div>
+          <div class="mail"><p>По вопросам пишите на <a href="mailto:edu@tinkoff.ru">edu@tinkoff.ru</a></p></div>
+        </div>
+      </footer>
     </main>
 </body>
-</html>
-  </body>
 </html>
